remove old multithreaded stuff

--- a/vignettes/plotting_states.Rmd
+++ b/vignettes/plotting_states.Rmd
@@ -4,7 +4,7 @@ author: "Thijs Janzen"
 date: "2023-01-20"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{"Plotting probabilities"}
+  %\VignetteIndexEntry{Plotting probabilities}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
