--- a/vignettes/setting_up_secsse.Rmd
+++ b/vignettes/setting_up_secsse.Rmd
@@ -37,7 +37,7 @@ focal_list
 With this list generated, we can now use this to populate our lambda matrices, using a constant rates model:
 ```{r default lambda matrices}
 lambda_matrices <- secsse::create_lambda_matrices(state_names = c("S", "N"),
-                                                  num_concealed_states = 2, 
+                                                  num_concealed_states = 2,
                                                   transition_list = focal_list,
                                                   model = "CR")
 lambda_matrices
@@ -89,8 +89,8 @@ q_ba <- 0.5
 sp_ns <- 0.2
 sp_sn <- 0.2
 
-params <- c(speciation, 
-            extinction, 
+params <- c(speciation,
+            extinction,
             sp_ns, sp_sn, q_ab, q_ba)
 
 lambda_matrices_p <- secsse::fill_in(lambda_matrices,
@@ -161,10 +161,12 @@ CTD and ETD model. Let's do that semi-automagically! We first define a generic
 function to optimize for a model:
 ```{r define_model_function}
 fit_model <- function(tree, traits, model) {
-  focal_list <- secsse::create_default_transition_list(state_names = c("S", "N"))
+  focal_list <- secsse::create_default_transition_list(state_names =
+                                                         c("S", "N"))
   lambda_matrices <- secsse::create_lambda_matrices(state_names = c("S", "N"),
-                                                    num_concealed_states = 2, 
-                                                    transition_list = focal_list,
+                                                    num_concealed_states = 2,
+                                                    transition_list =
+                                                        focal_list,
                                                     model = model)
   mus <- secsse::create_mus(state_names = c("S", "N"),
                             num_concealed_states = 2,
@@ -173,18 +175,18 @@ fit_model <- function(tree, traits, model) {
   q_list <- secsse::create_default_q_list(state_names = c("S", "N"),
                                           num_concealed_states = 2,
                                           mus = mus)
-  
+
   trans_matrix <- secsse::create_transition_matrix(state_names = c("S", "N"),
                                                    num_concealed_states = 2,
                                                    transition_list = q_list)
-  
+
   param_posit <- list()
   param_posit[[1]] <- lambda_matrices
   param_posit[[2]] <- mus
   param_posit[[3]] <- trans_matrix
-  
+
   max_indicator <- max(trans_matrix, na.rm = TRUE)
-  
+
   # we cheat a bit by setting extinction to zero -
   # in a real analysis this should be avoided.
   extinct_rates <- unique(mus)
@@ -192,7 +194,7 @@ fit_model <- function(tree, traits, model) {
   idparsopt <- idparsopt[-extinct_rates]
   idparsfix <- c(0, extinct_rates)
   parsfix <- rep(0.0, length(idparsfix))
-  
+
   initpars <- runif(n = length(idparsopt))
 
   testthat::expect_output( # suppress output
@@ -222,7 +224,7 @@ And then we loop over the different models:
 ```{r model looping}
 found <- c()
 for (focal_model in c("CR", "CTD", "ETD")) {
-  local_answ <- fit_model(tree = focal_tree, 
+  local_answ <- fit_model(tree = focal_tree,
                           traits = sim_traits,
                           model = focal_model)
   found <- rbind(found, c(focal_model, local_answ$ml, local_answ$aic))
@@ -231,7 +233,7 @@ colnames(found) <- c("model", "LL", "AIC")
 found <- as.data.frame(found)
 found$LL <- as.numeric(found$LL)
 found$AIC <- as.numeric(found$AIC)
-found 
+found
 ```
 
 Because we have simulated the tree using the CR model, we expect the model with
