--- a/vignettes/setting_up_secsse.Rmd
+++ b/vignettes/setting_up_secsse.Rmd
@@ -27,17 +27,19 @@ Now, we can specify three different models, 1) constant-rates model, where rates
 
 #### Lambdas
 To create the required lambda-matrices, we need as input information about the observed state names, the number of concealed states, and a transition_list object, which is a matrix defining the traits of daughter species upon speciation and their associated rate. We will here generate a default transition_list, but the user is free to create (and encouraged) one manually her/him self in order to reflect the focal system better.
-We assume here that we have a trait with lables "S" and "N", and use the default settings:
+We assume here that we have a trait with labels "S" and "N", and use the default settings:
 
 ```{r default_trans_list}
-focal_list <- secsse::create_default_transition_list(state_names = c("S", "N"))
+used_states <- c("S", "N")
+focal_list <- secsse::create_default_lambda_list(state_names = used_states)
 focal_list
 ```
 
-With this list generated, we can now use this to populate our lambda matrices, using a constant rates model:
+With this list generated, we can now use this to populate our lambda matrices, using a constant rates model and assuming two concealed states (the same number as our observed states):
 ```{r default lambda matrices}
-lambda_matrices <- secsse::create_lambda_matrices(state_names = c("S", "N"),
-                                                  num_concealed_states = 2,
+num_hidden_states <- 2
+lambda_matrices <- secsse::create_lambda_matrices(state_names = used_states,
+                                                  num_concealed_states = num_hidden_states,
                                                   transition_list = focal_list,
                                                   model = "CR")
 lambda_matrices
@@ -50,8 +52,8 @@ We see that there are four lambda matrices, one for each of the combined states 
 We also need to specify an extinction rate:
 
 ```{r adding extinction}
-mus <- secsse::create_mus(state_names = c("S", "N"),
-                          num_concealed_states = 2,
+mus <- secsse::create_mus(state_names = used_states,
+                          num_concealed_states = num_hidden_states,
                           model = "CR",
                           lambdas = lambda_matrices)
 mus
@@ -62,15 +64,16 @@ mus
 To specify a q-matrix, we again need to specify the transitions using a transition list. Again, we use the standard settings.
 
 ```{r default_trans} 
-q_list <- secsse::create_default_q_list(state_names = c("S", "N"),
-                                        num_concealed_states = 2,
+q_list <- secsse::create_default_q_list(state_names = used_states,
+                                        num_concealed_states = num_hidden_states,
                                         mus = mus)
 
 q_list
 
-trans_matrix <- secsse::create_transition_matrix(state_names = c("S", "N"),
-                                                 num_concealed_states = 2,
-                                                 transition_list = q_list)
+trans_matrix <- secsse::create_transition_matrix(state_names = used_states,
+                                                 num_concealed_states = num_hidden_states,
+                                                 transition_list = q_list,
+                                                 diff.conceal = TRUE)
 trans_matrix
 ```
 Here, we find transitions from A->B, B->A but also S->N and N->S.
@@ -84,14 +87,15 @@ To do so, we first need to specify our focal rates, and then fill them in.
 
 speciation <- 0.5
 extinction <- 0.0
+sp_sn <- 0.2
+sp_ns <- 0.2
 q_ab <- 0.5
 q_ba <- 0.5
-sp_ns <- 0.2
-sp_sn <- 0.2
 
 params <- c(speciation,
             extinction,
-            sp_ns, sp_sn, q_ab, q_ba)
+            sp_sn, sp_ns,
+            q_ab, q_ba)
 
 lambda_matrices_p <- secsse::fill_in(lambda_matrices,
                                      params)
@@ -107,7 +111,7 @@ With the values replaced, we can now simulate an "empirical" dataset:
 simulated_tree <- secsse::secsse_sim(lambdas = lambda_matrices_p,
                                      mus = mus_p,
                                      qs = trans_matrix_p,
-                                     num_concealed_states = 2,
+                                     num_concealed_states = num_hidden_states,
                                      crown_age = 5,
                                      conditioning = "obs_states",
                                      verbose = TRUE)
@@ -135,7 +139,7 @@ initpars <- initpars[-2]
 
 answ <- secsse::cla_secsse_ml(phy = focal_tree,
                               traits = sim_traits,
-                              num_concealed_states = 2,
+                              num_concealed_states = num_hidden_states,
                               idparslist = param_posit,
                               idparsopt = c(1, 3, 4, 5, 6),
                               initparsopt = initpars,
@@ -163,24 +167,24 @@ CTD and ETD model. Let's do that semi-automagically! We first define a generic
 function to optimize for a model:
 ```{r define_model_function}
 fit_model <- function(tree, traits, model) {
-  focal_list <- secsse::create_default_transition_list(state_names =
-                                                         c("S", "N"))
-  lambda_matrices <- secsse::create_lambda_matrices(state_names = c("S", "N"),
-                                                    num_concealed_states = 2,
+  focal_list <- secsse::create_default_lambda_list(state_names = used_states)
+  lambda_matrices <- secsse::create_lambda_matrices(state_names = used_states,
+                                                    num_concealed_states = num_hidden_states,
                                                     transition_list =
                                                         focal_list,
                                                     model = model)
-  mus <- secsse::create_mus(state_names = c("S", "N"),
-                            num_concealed_states = 2,
+  mus <- secsse::create_mus(state_names = used_states,
+                            num_concealed_states = num_hidden_states,
                             model = model,
                             lambdas = lambda_matrices)
-  q_list <- secsse::create_default_q_list(state_names = c("S", "N"),
-                                          num_concealed_states = 2,
+  q_list <- secsse::create_default_q_list(state_names = used_states,
+                                          num_concealed_states = num_hidden_states,
                                           mus = mus)
 
-  trans_matrix <- secsse::create_transition_matrix(state_names = c("S", "N"),
-                                                   num_concealed_states = 2,
-                                                   transition_list = q_list)
+  trans_matrix <- secsse::create_transition_matrix(state_names = used_states,
+                                                   num_concealed_states = num_hidden_states,
+                                                   transition_list = q_list,
+                                                   diff.conceal = TRUE)
 
   param_posit <- list()
   param_posit[[1]] <- lambda_matrices
@@ -202,7 +206,7 @@ fit_model <- function(tree, traits, model) {
   testthat::expect_output( # suppress output
   answ <- secsse::cla_secsse_ml(phy = focal_tree,
                                 traits = traits,
-                                num_concealed_states = 2,
+                                num_concealed_states = num_hidden_states,
                                 idparslist = param_posit,
                                 idparsopt = idparsopt,
                                 initparsopt = initpars,
