--- a/vignettes/setting_up_secsse.Rmd
+++ b/vignettes/setting_up_secsse.Rmd
@@ -115,7 +115,8 @@ simulated_tree <- secsse::secsse_sim(lambdas = lambda_matrices_p,
                                      num_concealed_states = num_hidden_states,
                                      crown_age = 5,
                                      conditioning = "obs_states",
-                                     verbose = TRUE)
+                                     verbose = TRUE,
+                                     seed = 26)
 sim_traits <- simulated_tree$obs_traits
 focal_tree <- simulated_tree$phy
 ```
@@ -165,8 +166,9 @@ We have done this now only for the CR model, but we can also use the
 CTD and ETD model. Let's do that semi-automagically! We first define a generic
 function to optimize for a model:
 ```{r define_model_function}
-fit_model <- function(tree, traits, model) {
-  focal_list <- secsse::create_default_lambda_list(state_names = used_states)
+fit_model <- function(focal_tree, traits, model) {
+  focal_list <- secsse::create_default_lambda_list(state_names = used_states,
+                                                   model = model)
   lambda_matrices <- secsse::create_lambda_matrices(state_names = used_states,
                                                     num_concealed_states = num_hidden_states,
                                                     transition_list =
@@ -200,7 +202,8 @@ fit_model <- function(tree, traits, model) {
   idparsfix <- c(0, extinct_rates)
   parsfix <- rep(0.0, length(idparsfix))
 
-  initpars <- runif(n = length(idparsopt))
+  initpars <- c(rep(params[1], min(extinct_rates) - 1),
+                params[-c(1, 2)])
 
   answ <- secsse::cla_secsse_ml(phy = focal_tree,
                                 traits = traits,
@@ -228,18 +231,9 @@ And then we can loop over the different models:
 
 ```{r model looping}
 
-# unfortunately, sometimes the ML doesn't converge
-# as this breaks knitting of the vignette
-# we recommend running the code locally, or knitting locally.
-# if at home, set the flag 'at_home' to TRUE
-
-at_home <- FALSE
-
-if (at_home) {
-
 found <- c()
 for (focal_model in c("CR", "CTD", "ETD")) {
-  local_answ <- fit_model(tree = focal_tree,
+  local_answ <- fit_model(focal_tree = focal_tree,
                           traits = sim_traits,
                           model = focal_model)
   found <- rbind(found, c(focal_model, local_answ$ml, local_answ$aic))
@@ -249,14 +243,6 @@ found <- as.data.frame(found)
 found$LL <- as.numeric(found$LL)
 found$AIC <- as.numeric(found$AIC)
 found
-
-}
-
-# typical output looks like:
-##   model        LL      AIC
-## 1    CR -34.38893 82.77786
-## 2   CTD -35.59013 87.18026
-## 3   ETD -34.38893 84.77786
 ```
 
 Because we have simulated the tree using the CR model, we expect the model with the lowest AIC to be the CR model again, and indeed we do find this!
