--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -106,10 +106,10 @@ results, and secsse will construct the lambda list accordingly:
 spec_matrix <- c()
 spec_matrix <- rbind(spec_matrix, c(0, 0, 0, 1))
 spec_matrix <- rbind(spec_matrix, c(1, 1, 1, 2))
-lambda_list <- secsse::create_lambda_matrices(state_names = c(0, 1),
-                                              num_concealed_states = 2,
-                                              transition_list = spec_matrix,
-                                              model = "ETD")
+lambda_list <- secsse::create_lambda_list(state_names = c(0, 1),
+                                          num_concealed_states = 2,
+                                          transition_matrix = spec_matrix,
+                                          model = "ETD")
 lambda_list
 ```
 
@@ -171,13 +171,13 @@ rates to be distinct, or alternatively choose to keep some identical
 (e.g. the rate of 0-\>1 equal to the rate of 1-\>0).
 
 ```{r ETD_Q}
-q_matrix <- c()
-q_matrix <- rbind(q_matrix, c(0, 1, 5))
-q_matrix <- rbind(q_matrix, c(1, 0, 6))
+shift_matrix <- c()
+shift_matrix <- rbind(shift_matrix, c(0, 1, 5))
+shift_matrix <- rbind(shift_matrix, c(1, 0, 6))
 
 trans_matrix <- secsse::create_transition_matrix(state_names = c(0, 1),
                                                  num_concealed_states = 2,
-                                                 transition_list = q_matrix,
+                                                 shift_matrix = shift_matrix,
                                                  diff.conceal = TRUE)
 trans_matrix
 ```
@@ -284,10 +284,10 @@ the model indicator to "CTD":
 spec_matrix <- c()
 spec_matrix <- rbind(spec_matrix, c(0, 0, 0, 1))
 spec_matrix <- rbind(spec_matrix, c(1, 1, 1, 2))
-lambda_list <- secsse::create_lambda_matrices(state_names = c(0, 1),
-                                              num_concealed_states = 2,
-                                              transition_list = spec_matrix,
-                                              model = "CTD")
+lambda_list <- secsse::create_lambda_list(state_names = c(0, 1),
+                                          num_concealed_states = 2,
+                                          transition_matrix = spec_matrix,
+                                          model = "CTD")
 lambda_list
 ```
 
@@ -322,13 +322,13 @@ Setting up the transition matrix is not different from the ETD model,
 the same transitions are possible:
 
 ```{r CTD_Q}
-q_matrix <- c()
-q_matrix <- rbind(q_matrix, c(0, 1, 5))
-q_matrix <- rbind(q_matrix, c(1, 0, 6))
+shift_matrix <- c()
+shift_matrix <- rbind(shift_matrix, c(0, 1, 5))
+shift_matrix <- rbind(shift_matrix, c(1, 0, 6))
 
 trans_matrix <- secsse::create_transition_matrix(state_names = c(0, 1),
                                                  num_concealed_states = 2,
-                                                 transition_list = q_matrix,
+                                                 shift_matrix = shift_matrix,
                                                  diff.conceal = TRUE)
 trans_matrix
 ```
@@ -399,10 +399,10 @@ indicator across both states.
 spec_matrix <- c()
 spec_matrix <- rbind(spec_matrix, c(0, 0, 0, 1))
 spec_matrix <- rbind(spec_matrix, c(1, 1, 1, 1))
-lambda_list <- secsse::create_lambda_matrices(state_names = c(0, 1),
-                                              num_concealed_states = 2,
-                                              transition_list = spec_matrix,
-                                              model = "CR")
+lambda_list <- secsse::create_lambda_list(state_names = c(0, 1),
+                                          num_concealed_states = 2,
+                                          transition_matrix = spec_matrix,
+                                          model = "CR")
 lambda_list
 ```
 
@@ -429,13 +429,13 @@ the same rate. Here, we will choose the more parameter-rich version
 all rates in the transition matrix are the same).
 
 ```{r CR_Q}
-q_matrix <- c()
-q_matrix <- rbind(q_matrix, c(0, 1, 3))
-q_matrix <- rbind(q_matrix, c(1, 0, 4))
+shift_matrix <- c()
+shift_matrix <- rbind(shift_matrix, c(0, 1, 3))
+shift_matrix <- rbind(shift_matrix, c(1, 0, 4))
 
 trans_matrix <- secsse::create_transition_matrix(state_names = c(0, 1),
                                                  num_concealed_states = 2,
-                                                 transition_list = q_matrix,
+                                                 shift_matrix = shift_matrix,
                                                  diff.conceal = TRUE)
 trans_matrix
 ```
