--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -143,10 +143,10 @@ Since we are using the ETD model, here we also expect the extinction
 rates to be different:
 
 ```{r ETD_mu}
-mu_vec <- secsse::create_mus(state_names = c(0, 1),
-                             num_concealed_states = 2,
-                             model = "ETD",
-                             lambdas = lambda_list)
+mu_vec <- secsse::create_mu_vector(state_names = c(0, 1),
+                                   num_concealed_states = 2,
+                                   model = "ETD",
+                                   lambda_list = lambda_list)
 mu_vec
 ```
 
@@ -175,11 +175,11 @@ shift_matrix <- c()
 shift_matrix <- rbind(shift_matrix, c(0, 1, 5))
 shift_matrix <- rbind(shift_matrix, c(1, 0, 6))
 
-trans_matrix <- secsse::create_transition_matrix(state_names = c(0, 1),
-                                                 num_concealed_states = 2,
-                                                 shift_matrix = shift_matrix,
-                                                 diff.conceal = TRUE)
-trans_matrix
+q_matrix <- secsse::create_q_matrix(state_names = c(0, 1),
+                                    num_concealed_states = 2,
+                                    shift_matrix = shift_matrix,
+                                    diff.conceal = TRUE)
+q_matrix
 ```
 
 Again, we first specify a matrix containing the potential state
@@ -229,7 +229,7 @@ And now we can perform maximum likelihood:
 idparslist <- list()
 idparslist[[1]] <- lambda_list
 idparslist[[2]] <- mu_vec
-idparslist[[3]] <- trans_matrix
+idparslist[[3]] <- q_matrix
 
 answ <- secsse::cla_secsse_ml(phy = focal_tree,
                               traits = focal_traits$trait,
@@ -304,10 +304,10 @@ is now associated with all states with concealed state B.
 For the mu vector, we repeat the same we did for the ETD model:
 
 ```{r CTD_mu}
-mu_vec <- secsse::create_mus(state_names = c(0, 1),
-                             num_concealed_states = 2,
-                             model = "CTD",
-                             lambdas = lambda_list)
+mu_vec <- secsse::create_mu_vector(state_names = c(0, 1),
+                                   num_concealed_states = 2,
+                                   model = "CTD",
+                                   lambda_list = lambda_list)
 mu_vec
 ```
 
@@ -326,11 +326,11 @@ shift_matrix <- c()
 shift_matrix <- rbind(shift_matrix, c(0, 1, 5))
 shift_matrix <- rbind(shift_matrix, c(1, 0, 6))
 
-trans_matrix <- secsse::create_transition_matrix(state_names = c(0, 1),
-                                                 num_concealed_states = 2,
-                                                 shift_matrix = shift_matrix,
-                                                 diff.conceal = TRUE)
-trans_matrix
+q_matrix <- secsse::create_q_matrix(state_names = c(0, 1),
+                                    num_concealed_states = 2,
+                                    shift_matrix = shift_matrix,
+                                    diff.conceal = TRUE)
+q_matrix
 ```
 
 #### Maximum Likelihood
@@ -348,7 +348,7 @@ sampling_fraction <- c(1, 1)
 idparslist <- list()
 idparslist[[1]] <- lambda_list
 idparslist[[2]] <- mu_vec
-idparslist[[3]] <- trans_matrix
+idparslist[[3]] <- q_matrix
 
 answ <- secsse::cla_secsse_ml(phy = focal_tree,
                               traits = focal_traits$trait,
@@ -412,10 +412,10 @@ The mu vector follows closely from this, having a shared extinction rate
 across all states:
 
 ```{r CR_mu}
-mu_vec <- secsse::create_mus(state_names = c(0, 1),
-                             num_concealed_states = 2,
-                             model = "CR",
-                             lambdas = lambda_list)
+mu_vec <- secsse::create_mu_vector(state_names = c(0, 1),
+                                   num_concealed_states = 2,
+                                   model = "CR",
+                                   lambda_list = lambda_list)
 mu_vec
 ```
 
@@ -433,11 +433,11 @@ shift_matrix <- c()
 shift_matrix <- rbind(shift_matrix, c(0, 1, 3))
 shift_matrix <- rbind(shift_matrix, c(1, 0, 4))
 
-trans_matrix <- secsse::create_transition_matrix(state_names = c(0, 1),
-                                                 num_concealed_states = 2,
-                                                 shift_matrix = shift_matrix,
-                                                 diff.conceal = TRUE)
-trans_matrix
+q_matrix <- secsse::create_q_matrix(state_names = c(0, 1),
+                                    num_concealed_states = 2,
+                                    shift_matrix = shift_matrix,
+                                    diff.conceal = TRUE)
+q_matrix
 ```
 
 #### Maximum Likelihood
@@ -452,7 +452,7 @@ sampling_fraction <- c(1, 1)
 idparslist <- list()
 idparslist[[1]] <- lambda_list
 idparslist[[2]] <- mu_vec
-idparslist[[3]] <- trans_matrix
+idparslist[[3]] <- q_matrix
 
 answ <- secsse::cla_secsse_ml(phy = focal_tree,
                               traits = focal_traits$trait,
